// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getUserDetailTool > nickname がないときは user の globalName / username で表示名を補完する 1`] = `
{
  "user": {
    "avatar": null,
    "banner": null,
    "bot": false,
    "displayName": "global-name",
    "globalName": "global-name",
    "id": "user-1",
    "nickname": null,
    "username": "username",
  },
}
`;

exports[`getUserDetailTool > ユーザー情報と表示名/ニックネームを単一 user フィールドで返す 1`] = `
{
  "user": {
    "avatar": null,
    "banner": null,
    "bot": false,
    "displayName": "guild-nick",
    "globalName": "global-user",
    "id": "user-1",
    "nickname": "guild-nick",
    "username": "username",
  },
}
`;
